Added Icon to the website

--- a/structures/templates/home.html
+++ b/structures/templates/home.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Chem_Desk</title>
+    <link rel="icon" href="https://img.icons8.com/dotty/80/000000/benzene-ring.png">
     {% load static %}
         <link href="{% static 'css/bootstrap.min.css' %}" >
     <script src="{% static 'bootstrap.min.js' %}"></script>
