--- a/structures/templates/index.html
+++ b/structures/templates/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>ChemDesk</title>
+      <link rel="icon" href="https://img.icons8.com/dotty/80/000000/benzene-ring.png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
