--- a/structures/templates/periodic_table.html
+++ b/structures/templates/periodic_table.html
@@ -2,9 +2,13 @@
 <html manifest="periodicTable.manifest">
 <head>
 	<meta charset="UTF-8">
-	<title>Periodic Table Demo</title>
-
+	<title>Periodic Table</title>
+    <link rel="icon" href="https://img.icons8.com/dotty/80/000000/benzene-ring.png">
     {% load static %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'structures/css/main.css' %}">
+      <script src="{% static 'structures/css/main.css' %}"></script>
+
     <script>var Kekule = require('kekule').Kekule;</script>
     <script src="{% static 'structures/js/kekule/kekule.js' %}"></script>
     <script src="{% static 'structures/js/kekule/kekule.js?modules=chemWidget&min=true' %}"></script>
