--- a/structures/templates/structure_compare.html
+++ b/structures/templates/structure_compare.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Molecule Compare</title>
+    <link rel="icon" href="https://img.icons8.com/dotty/80/000000/benzene-ring.png">
     {% load static %}
     <script>var Kekule = require('kekule').Kekule;</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
