Ifram where our demo video is supposed to go

--- a/structures/templates/index.html
+++ b/structures/templates/index.html
@@ -28,7 +28,9 @@
         <div class="uploadBtn" onClick="getSecondView()">Get Started</div>
       </div>
       <div class="afterStart">
+          <iframe width="640" height="360" src="https://www.youtube.com/embed/0g8lANs6zpQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h1>C<span>D:</span> Chem<span>Desk</span></h1>
+
         <!-- <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_X2u2xK.json"  background="transparent"  speed="1"  style="width: 200px;  height: 200px; margin: 4% auto;"  loop  autoplay></lottie-player> -->
         <p class="aDescription">ChemDesk can read a document in any of the over 90 graphical formats parseable by ImageMagick - including GIF, JPEG, PNG, TIFF, PDF, PS etc., and generate the SMILES or SDF representation of the molecular structure images encountered within that document.</p>
         <h2>UPLOAD IMAGE</h2>
