--- a/structures/templates/structures/viewer.html
+++ b/structures/templates/structures/viewer.html
@@ -36,6 +36,7 @@
 		}
 	</style>
 
+    <link id="mol2" href="{% static 'aldehyde.mol' %}" type="chemical/x-mdl-molfile" />
 	<script name="mol1" id="mol1" type="chemical/x-mdl-molfile">
 Untitled Document-2
   Kekule  07101201153D
@@ -53,6 +54,7 @@ Untitled Document-2
   1  5  1  0
   2  6  1  0
 M  END
+
 	</script>
 
 	<script>
@@ -83,10 +85,6 @@ M  END
 	<div id="chemViewer" style="width:1000px;height:650px"
 			 data-widget="Kekule.ChemWidget.Viewer3D" data-enable-toolbar="true" data-auto-size="false" data-padding="20"
 			 data-toolbar-evoke-modes="[0]"
-			 data-chem-obj="url(#mol1)"></div>
-	<div id="header">
-		<button id="btnOpenBabel" data-widget="Kekule.Widget.Button">Enable OpenBabel Formats</button>
-		<span>Click this button to load OpenBabel library to support more chemical data formats. Check the load or save button in viewer to see the changes.</span>
-	</div>
+			 data-chem-obj="url(#mol2)"></div
 </body>
 </html>
