--- a/structures/templates/structures/viewer.html
+++ b/structures/templates/structures/viewer.html
@@ -153,14 +153,14 @@
     <div class="HomeSection">
       <div class="infoSection">
         <div class="srcImg">
-          <img src="./aspirin.png" />
+          <img src="{% static 'image.png' %}" />
         </div>
         <div class="textInfo">
-          <h3><span>IUPAC: </span>2-Acetyloxybenzoic acid</h3>
-          <h3><span>Smile: </span>CC(=O)Oc1ccccc1C(=O)O</h3>
-          <h3><span>PubChem CID : </span>2244</h3>
-          <h3><span>Molecular Formula: </span>C9H8O4</h3>
-          <h3><span>Molecular Weight: </span>180.16 g/mol</h3>
+          <h3><span>IUPAC: </span>5R-Hydroxy-4R-decanolide</h3>
+          <h3><span>Smile: </span>CCCCCCCC1CCC(=O)O1</h3>
+          <h3><span>PubChem CID : </span>15931710</h3>
+          <h3><span>Molecular Formula: </span>C11H20O3</h3>
+          <h3><span>Molecular Weight: </span>200.27 g/mol</h3>
           <h3><span>Formal Charge: </span>0</h3>
           <h3><span>Toxicity: </span>0.342</h3>
           <h3><span>Solubility: </span>0.478</h3>
